# Creators-Workshop-MVP

./: Cargo.toml  README.md
src/: main.rs
static/templates/: index.html
