[package]
name = "creators_workshop"
version = "0.1.0"
authors = ["m123.123.123@hotmail.com <m123.123.123@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde_json = "1.0"